--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
     "cmdk": "^0.1.21",
     "contentlayer": "^0.2.9",
     "date-fns": "^2.29.3",
+    "esbuild": "^0.17.12",
     "lucide-react": "^0.92.0",
     "next": "^13.2.3",
     "next-auth": "^4.20.1",
